# TeraDock

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTERNAL_DESIGN.md  LICENSE  PROJECT_PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.1.2.md  RELEASE_NOTES_1.1.3.md  RESULT_TeraDock_AGENT_WORKFLOW.md  RESULT_TeraDock_ARTIFACT_VALIDATION_PREP.md  RESULT_TeraDock_CONPTY_EXPLICIT_BACKEND_INTEGRATION.md  RESULT_TeraDock_GITHUB_WORKFLOW_TEMPLATES.md  RESULT_TeraDock_POST_RELEASE_OPS_1_0_3.md  RESULT_TeraDock_PRODUCTIZATION.md  RESULT_TeraDock_RC_ARTIFACT_VALIDATION.md  RESULT_TeraDock_RELEASE_1_1_2_VERSION_FIX.md  RESULT_TeraDock_RELEASE_1_1_3_VERSION_CONSISTENCY.md  RESULT_TeraDock_SESSION_LOGGING_V1_1_PREP.md  RESULT_TeraDock_SESSION_PRUNE_JSON.md  RESULT_TeraDock_SESSION_STATS.md  RESULT_TeraDock_SETTINGS_UI_AND_SESSION_LOG_DIAG.md  RESULT_TeraDock_SSH_CORE_BOUNDARY.md  RESULT_TeraDock_SSH_SESSION_HARDENING.md  RESULT_TeraDock_TUI_CONPTY_EXIT_CODE_AND_CLEANUP.md  RESULT_TeraDock_TUI_CONPTY_STABILITY_DECISION.md  RESULT_TeraDock_TUI_CONPTY_STABILITY_SMOKE.md  RESULT_TeraDock_TUI_SESSION_LOGGING_INTEGRATION.md  RESULT_TeraDock_TUI_SSH_SESSION.md  RESULT_TeraDock_V0_1_RC_PREP.md  RESULT_TeraDock_WINDOWS_CONPTY_ABORT_TIMEOUT.md  RESULT_TeraDock_WINDOWS_CONPTY_EVENT_LOOP_STABILIZATION.md  RESULT_TeraDock_WINDOWS_CONPTY_LOGGING_SUCCESS.md  RESULT_TeraDock_WINDOWS_CONPTY_MANUAL_SMOKE.md  (+8 more)
.agent/: AGENTS.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  release_slice_task.yml
.github/workflows/: ci.yml  release.yml
config/: default_profiles.toml
crates/cli/: Cargo.toml  README.md
crates/cli/.rpm/: td.spec
crates/cli/src/: main.rs  transfer.rs
crates/common/: Cargo.toml
crates/common/src/: id.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  cmdset.rs  cmdset_runner.rs  command.rs  config.rs  configset.rs  conpty.rs  crypto.rs  db.rs  doctor.rs  error.rs  history.rs  import_export.rs  lib.rs  oplog.rs  parser.rs  paths.rs  profile.rs  secret.rs  secrets.rs  session_log.rs  settings.rs  settings_registry.rs  ssh.rs  tester.rs  transfer.rs  tunnel.rs  util.rs
crates/core/tests/: profiles.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  main.rs  settings_ui.rs  state.rs  ui.rs
docs/: commandsets.md  getting-started.md  post-release-audit-1.0.3.md  release-artifact-validation.md  security.md  tui.md
docs/internal/: codex-workflow.md  commandset-execution-boundary.md  session-logging-design.md  ssh-invocation-boundary.md  windows-conpty-manual-smoke.md  windows-conpty-session-logging-design.md  windows-tui-conpty-manual-smoke.md
execplans/: 001-bootstrap.md  001-ttlaunch.md  002-persistence-and-profiles.md  002-profile-security-and-preferences.md  003-p2-play-features.md  003-secrets-and-master-password.md  004-doctor-and-connect.md  004-ssh-launcher.md  005-ssh-exec.md  006-serial-connect.md  007-project-plan-embed.md  008-run-commandset.md  009-configset-apply.md  010-import-export.md  011-test-command.md  012-ftp-insecure-guard.md  013-tui-workflow.md  014-release-packaging-and-ci.md  015-env-scopes.md  016-tunnel-and-forwards.md  017-ssh-agent-commands.md  018-tui-resolved-queue.md  019-tui-conpty-ctrl-c.md  020-session-log-prune.md
installer/: setup.iss
packaging/linux/: package-tar.sh
packaging/windows/: td.iss
wiki/: 00-目次.md  01-概要.md  02-アーキテクチャ.md  03-データモデル.md  04-機能とUX.md  05-セキュリティと秘密管理.md  06-テストとリリース計画.md  07-crates実装解析.md
