[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["TeraDock Developers"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
egui = "0.26"
eframe = { version = "0.26", default-features = true, features = ["wgpu"] }
parking_lot = "0.12"
