[workspace]
members = [
    "crates/common",
    "crates/core",
    "crates/cli",
    "crates/tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
data-encoding = "2.6.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
