[workspace]
members = [
    "crates/common",
    "crates/core",
    "crates/cli",
    "crates/tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
data-encoding = "2.6.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
anyhow = "1.0.95"
thiserror = "1.0.65"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono", "serde_json"] }
directories = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.36", features = ["macros", "serde-human-readable"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2.3"
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1" }
base64 = "0.22.1"
rpassword = "7.3.1"
zeroize = "1.8.1"
wait-timeout = "0.2.0"
serialport = "4.3.0"
crossterm = "0.27.0"
