[package]
name = "td"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TeraDock command-line interface"

[package.metadata.deb]
maintainer = "TeraDock Team <noreply@example.com>"
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/td", "usr/bin/td", "755"],
]

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tdcore = { path = "../core" }
directories = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
zeroize = { workspace = true }
wait-timeout = { workspace = true }
serialport = { workspace = true }
crossterm = { workspace = true }
