[package]
name = "td"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
description = "TeraDock command-line interface"

[package.metadata.deb]
maintainer = "TeraDock Team <noreply@example.com>"
section = "utility"
priority = "optional"
depends = "$auto"
assets = [
  ["target/release/td", "usr/bin/td", "755"],
  ["README.md", "usr/share/README.md", "644"],
  ["LICENSE", "usr/share/LICENSE", "644"],
]

[package.metadata.generate-rpm]
release = "1"
assets = [
  { source = "target/release/td", dest = "/usr/bin/td", mode = "755" },
  { source = "README.md", dest = "/usr/share/README.md", mode = "644", doc = true },
  { source = "LICENSE",   dest = "/usr/share/LICENSE", mode = "644", doc = true },
]

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tdcore = { path = "../core" }
tui = { path = "../tui" }
directories = { workspace = true }
rpassword = { workspace = true }
rusqlite = { workspace = true }
zeroize = { workspace = true }
wait-timeout = { workspace = true }
serialport = { workspace = true }
crossterm = { workspace = true }
