[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared identifiers and utility types for the TeraDock workspace"
publish = false

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
