[package]
name = "tdcore"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
directories = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
