[package]
name = "tdcore"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
directories = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
regex = { workspace = true }
