[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
ttcore = { path = "../core" }
