[package]
name = "tui"
version = "1.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Terminal user interface for TeraDock profile browsing and CommandSet execution"
publish = false

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = "0.26.3"
serde_json = { workspace = true }
directories = { workspace = true }
tdcore = { path = "../core" }
rusqlite = { workspace = true }
